<resources>
    <string name="app_name">SC Current</string>
    <string name="app_long_name">Short Circuit Current Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="title_activity_calc">Calculation</string>
    <string name="action_save">Save</string>
    <string name="action_save_new">Save in new file</string>
    <string name="action_clearall">clearAll</string>
    <string name="enter_new_file_name">Enter new file name</string>
    <string name="created_by">Created by</string>
    <string name="file_exists_info">File with given name exists. Choose another name.</string>
    <string name="old_file">File not compatible with current version of the application.</string>
    <string name="res_out_of_range">Result out of range.</string>


    <string name="cableMaterial_prompt">Choose cable material</string>

    <string-array name="lineMaterial_array">
        <item>CU</item>
        <item>AL</item>
    </string-array>

    <string-array name="linePlacement_array">
        <item>Cable line</item>
        <item>Overhead line</item>
    </string-array>

    <string-array name="moveDirection_array">
        <item>Up</item>
        <item>Down</item>
    </string-array>

    <string-array name="tileListOperation_array">
        <item>Move up</item>
        <item>Move down</item>
        <item>Delete item</item>
    </string-array>

    <string-array name="phases_no_array">
        <item>~3</item>
        <item>~1</item>
    </string-array>

    <!--general-->
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="file_saved">File saved</string>
    <string name="file_saved_new">New file saved</string>
    <string name="are_u_sure">Are you sure?</string>
    <string name="ignore_changes_q">Ignore changes?</string>
    <string name="clear_all_are_u_sure">Delete all elements?</string>
    <string name="yes_answer">Yes</string>
    <string name="no_answer">No</string>
    <string name="save_file">Save to file?</string>
    <string name="delete_file">Delete file?</string>
    <string name="calc_up">Up</string>
    <string name="calc_down">Down</string>
    <string name="calc_move">Move item</string>
    <string name="about_send_email">Send e-mail</string>
    <string name="version">Version</string>
    <string name="calc_tile_Operation">Menu</string>
    <string name="calc_success">Calculated successfully</string>

    <!--activities tile names-->
    <string name="title_activity_utility">Utility preferences</string>
    <string name="title_activity_trafo">Trafo preferences</string>
    <string name="title_activity_line">Line preferences</string>
    <string name="title_activity_load">Load preferences</string>
    <string name="title_activity_motor">Motor preferences</string>
    <string name="title_activity_bus">SC Results</string>
    <string name="title_activity_about">About</string>

    <!--Main activity strings-->
    <string name="main_click_on_file"> Click on file to open saved project:</string>
    <string name="main_creation_date"> Creation date: </string>
    <string name="click_new"> Click here to create a new project:</string>


    <!--Calc activity strings-->
    <string name="calc_add_utility_btn_name">Add utility</string>
    <string name="calc_add_trafo_btn_name">Add trafo</string>
    <string name="calc_add_line_btn_name">Add line</string>
    <string name="calc_add_load_btn_name">Add load</string>
    <string name="calc_add_motor_btn_name">Add motor</string>
    <!--<string name="calc_add_bus_btn_name">Add bus with short circuit</string>-->
    <string name="calc_add_bus_btn_name">Add point of short circuit</string>
    <string name="calc_calc_btn_name">Calculate</string>

    <!--general item strings-->
    <string name="name_p">Enter name</string>
    <string name="name_item">Name</string>
    <string name="power_p">Enter power</string>
    <string name="power_kva_item">Power [kVA]</string>
    <string name="power_kW_item">Power [kW]</string>
    <string name="voltage_kv_item">Voltage [kV]</string>
    <string name="voltage_p">Enter voltage</string>
    <string name="value_p">Enter value</string>
    <string name="enter_all_values">Enter all values</string>
    <string name="enter_values_in_tiles">Enter values in following items: </string>
    <string name="efficiency">\u03B7 - Efficiency</string>
    <string name="startup_factor">Start-up factor</string>
    <string name="phases_no_item"> Number of phases</string>
    <string name="onePhaseSC"> Ik1"</string>
    <string name="treePhaseSC"> Ik3"</string>
    <string name="IkBis"> - Initial short-circuit current. </string>
    <string name="Ip"> - Peak short-circuit current. </string>
    <string name="Zk"> - Total impedance. </string>

    <!--general item strings-->
    <string name="tiles_wrong_order">Items are not in right order. Source, like a utility or a transformer has to be first and a load or a motor has to be last. There cannot be any transformer between point od short-circuit and a load or a motor.</string>
    <string name="tiles_necessary_not_present">Not all necessary items were added. </string>
    <string name="source">Source: utility or trafo</string>
    <string name="load">Load</string>
    <string name="lackof">Lack of: </string>
    <string name="trafos_u_not_match">Transformers\' voltages do not match. (Tn uS ~ T n+1 uP)</string>
    <string name="last_trafo_and_loadu_u_not_match">Load\'s nominal voltage does not match the last transformer\'s secondary voltage. (LD uN ~ T uS)</string>

    <!--point od SSCC item strings-->
    <string name="bus">Point of short circuit</string>

    <!--Utility activity strings-->
    <string name="utility_name">Utility name</string>
    <string name="utility_name_p">Enter utility name</string>
    <string name="utility_scpower">SC Power [MVA]</string>
    <string name="utility_scpower_p">Enter SC power</string>
    <string name="utility_voltage">Voltage [kV]</string>
    <string name="utility_voltage_p">Enter voltage</string>
    <string name="utility_rea">XQ [\u03A9] =</string>
    <string name="utility_res">RQ [\u03A9] =</string>
    <string name="utility_imp">ZkQ [\u03A9] =</string>
    <string name="utility_sccurrent">Ik3" [kA] =</string>

    <!--Trafo activity strings-->
    <string name="trafo_name">Trafo name</string>
    <string name="trafo_power">Trafo Power [kVA]</string>
    <string name="trafo_p_v">Primary voltage [kV]</string>
    <string name="trafo_p_v_s">Primary v. [kV]</string>
    <string name="trafo_s_v">Seconary voltage [kV]</string>
    <string name="trafo_s_v_s">Seconary v. [kV]</string>
    <string name="trafo_uk_p">Enter uk</string>
    <string name="trafo_nom_loss">Nominal loss [kW]</string>
    <string name="trafo_rea">XkT [\u03A9] =</string>
    <string name="trafo_res">RkT [\u03A9] =</string>
    <string name="trafo_imp">ZkT [\u03A9] =</string>
    <string name="trafo_sccurrent">Ik3" [kA] =</string>

    <!--Line activity strings-->
    <string name="line_lenght">Lenght [m]</string>
    <string name="line_cs">Cross section [mm\u00b2]</string>
    <string name="line_mat">Material</string>
    <string name="line_plac">Placement</string>
    <string name="line_rea">XL [\u03A9] =</string>
    <string name="line_res">RL [\u03A9] =</string>
    <string name="line_imp">ZkL [\u03A9] =</string>
    <string name="line_sccurrent">Ik3" [kA] =</string>

    <!--Motor activity strings-->
    <string name="motor_rea">Xm [\u03A9] =</string>
    <string name="motor_res">Rm [\u03A9] =</string>
    <string name="motor_imp">Zm [\u03A9] =</string>

    <!--Point of SC (BUS) activity strings-->





</resources>
<!--<p>To jest tekst <sup>w indeksie górnym</sup>.</p>-->