<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_trafo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="pl.ls4soft.sscc.Items.TrafoActivity"
    tools:showIn="@layout/activity_trafo"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <TextView

                        android:text="@string/name_item"
                        android:id="@+id/trafoNameTV"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textStyle="bold"
                        android:textColor="@color/colorPrimaryDark"
                        android:layout_marginLeft="5dip"
                        android:textSize="10sp"
                        android:gravity="center_vertical">

                    </TextView>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:ems="10"
                        android:hint="@string/name_p"
                        android:id="@+id/trafoNameET"
                        android:textSize="14sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <TextView

                        android:text="@string/power_kva_item"
                        android:id="@+id/TrafoPowerTV"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textStyle="bold"
                        android:textColor="@color/colorPrimaryDark"
                        android:layout_marginLeft="5dip"
                        android:textSize="10sp"
                        android:gravity="center_vertical">

                    </TextView>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:ems="10"
                        android:id="@+id/TrafoPowerET"
                        android:hint="@string/power_p"
                        android:inputType="numberDecimal"
                        android:textSize="14sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <TextView

                        android:text="@string/trafo_p_v"
                        android:id="@+id/TrafoPrimaryVoltageTV"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textStyle="bold"
                        android:textColor="@color/colorPrimaryDark"
                        android:layout_marginLeft="5dip"
                        android:textSize="10sp"
                        android:gravity="center_vertical">

                    </TextView>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:ems="10"
                        android:id="@+id/TrafoPrimaryVoltageET"
                        android:hint="@string/voltage_p"
                        android:inputType="numberDecimal"
                        android:textSize="14sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <TextView

                        android:text="@string/trafo_s_v"
                        android:id="@+id/TrafoSeconaryVoltageTV"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textStyle="bold"
                        android:textColor="@color/colorPrimaryDark"
                        android:layout_marginLeft="5dip"
                        android:textSize="10sp"
                        android:gravity="center_vertical">

                    </TextView>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:ems="10"
                        android:id="@+id/TrafoSeconaryVoltageET"
                        android:hint="@string/voltage_p"
                        android:inputType="numberDecimal"
                        android:textSize="14sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <TextView

                        android:text="uk [%]"
                        android:id="@+id/ukTV"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textStyle="bold"
                        android:textColor="@color/colorPrimaryDark"
                        android:layout_marginLeft="5dip"
                        android:textSize="10sp"
                        android:gravity="center_vertical">

                    </TextView>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:ems="10"
                        android:id="@+id/ukET"
                        android:hint="@string/value_p"
                        android:inputType="numberDecimal"
                        android:textSize="14sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <TextView

                        android:id="@+id/NominalLossTV"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textStyle="bold"
                        android:textColor="@color/colorPrimaryDark"
                        android:layout_marginLeft="5dip"
                        android:textSize="10sp"
                        android:text="@string/trafo_nom_loss"
                        android:gravity="center_vertical">

                    </TextView>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:ems="10"
                        android:id="@+id/NominalLossET"
                        android:hint="@string/value_p"
                        android:inputType="numberDecimal"
                        android:textSize="14sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <TextView

                        android:text="@string/trafo_rea"
                        android:id="@+id/xtTV"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textStyle="bold"
                        android:textColor="@color/colorPrimaryDark"
                        android:layout_marginLeft="5dip"
                        android:textSize="10sp"
                        android:gravity="center_vertical">

                    </TextView>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:ems="10"
                        android:id="@+id/xtET"
                        android:inputType="numberDecimal"
                        android:textSize="14sp"
                        android:text="-"
                        android:clickable="false"
                        android:cursorVisible="false"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:textColor="@android:color/holo_red_dark" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <TextView

                        android:text="@string/trafo_res"
                        android:id="@+id/rtTV"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textStyle="bold"
                        android:textColor="@color/colorPrimaryDark"
                        android:layout_marginLeft="5dip"
                        android:textSize="10sp"
                        android:gravity="center_vertical">

                    </TextView>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:ems="10"
                        android:inputType="numberDecimal"
                        android:textSize="14sp"
                        android:text="-"
                        android:id="@+id/rtET"
                        android:clickable="false"
                        android:cursorVisible="false"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:textColor="@android:color/holo_red_dark" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <TextView

                        android:text="@string/trafo_imp"
                        android:id="@+id/ztTV"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textStyle="bold"
                        android:textColor="@color/colorPrimaryDark"
                        android:layout_marginLeft="5dip"
                        android:textSize="10sp"
                        android:gravity="center_vertical">

                    </TextView>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:ems="10"
                        android:id="@+id/ztET"
                        android:inputType="numberDecimal"
                        android:textSize="14sp"
                        android:text="-"
                        android:clickable="false"
                        android:cursorVisible="false"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:textColor="@android:color/holo_red_dark" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                </TableRow>

            </TableLayout>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal">

                    <Button
                        android:text="OK"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/TOkBtn"
                        android:background="@drawable/edstyle_green"
                        android:layout_margin="1dp" />

                    <Button
                        android:text="@string/cancel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/TCancelBtn"
                        android:background="@drawable/edstyle_blue"
                        android:layout_margin="1dp" />

                    <Button
                        android:text="@string/delete"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/TDeleteBtn"
                        android:background="@drawable/edstyle_red"
                        android:layout_margin="1dp" />
                </TableRow>

            </TableLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
