<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_load"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="pl.ls4soft.sscc.Items.LoadActivity"
    tools:showIn="@layout/activity_load"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView

                        android:id="@+id/LoadNameTV"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="5dip"
                        android:gravity="center_vertical"
                        android:text="@string/name_item"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="10sp"
                        android:textStyle="bold">

                    </TextView>

                    <EditText
                        android:id="@+id/LoadNameET"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:editable="false"
                        android:ems="10"
                        android:gravity="center_vertical"
                        android:hint="@string/name_p"
                        android:inputType="text"
                        android:textSize="14sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView

                        android:id="@+id/LoadVoltageTV"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="5dip"
                        android:gravity="center_vertical"
                        android:text="@string/voltage_kv_item"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="10sp"
                        android:textStyle="bold">

                    </TextView>

                    <EditText
                        android:id="@+id/LoadVoltageET"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:editable="false"
                        android:ems="10"
                        android:gravity="center_vertical"
                        android:hint="@string/voltage_p"
                        android:inputType="numberDecimal"
                        android:textSize="14sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="200dp">





                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView

                        android:id="@+id/LoadNoOfPhasesTV"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="5dip"
                        android:gravity="center_vertical"
                        android:text="@string/phases_no_item"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="10sp"
                        android:textStyle="bold">

                    </TextView>


                    <Spinner
                        android:id="@+id/LoadPhaseNoSpinner"
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:gravity="center_vertical"
                        android:spinnerMode="dropdown" />



                </TableRow>


                <ImageView
                    android:id="@+id/tileLoadIV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/load_info1" />




            </TableLayout>


            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal">


                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                    <Button
                        android:id="@+id/LdOkBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="1dp"
                        android:background="@drawable/edstyle_green"
                        android:text="OK" />

                    <Button
                        android:id="@+id/LdCancelBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="1dp"
                        android:background="@drawable/edstyle_blue"
                        android:text="@string/cancel" />

                    <Button
                        android:id="@+id/LdDeleteBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="1dp"
                        android:background="@drawable/edstyle_red"
                        android:text="@string/delete" />
                </TableRow>

            </TableLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
